--- a/public/GrinderGiftsCSS.css
+++ b/public/GrinderGiftsCSS.css
@@ -1,11 +1,26 @@
-
+html {
+  scroll-behavior: smooth;
+}
 
 header {
-  background-image: url(coffeeGrinders.JPG);
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+}
+
+h1 {
+  font-family: Poppins;
+}
+
+.poppin {
+  font-family: Poppins;
+}
+
+p {
+  text-align: center;
+  line-height: 1.2em;
+  font-family: "Lato", sans-serif;
 }
 
 .navbar {
@@ -17,42 +32,48 @@ header {
   justify-content: space-between;
 }
 
-
-.nav-item:hover{
+.nav-item:hover {
   background-color: #d4d7dd;
   text-decoration-color: white;
 }
 
+.navbar-default {
+  background: #fff;
+  border: 0;
+  font-family: Poppins;
+}
+
 /*  start  */
 
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   min-height: 100%;
 }
 
+#info1 {
+  margin-top: 2rem;
+}
+
+.info-left {
+  margin-left: 6rem;
+}
+
+.info-right {
+  margin-top: 3.7rem;
+}
+
 h1 {
-  text-align: center;
   margin: auto;
   font-size: 3rem;
   font-family: "Montserrat-Black", sans-serif;
   font-weight: normal;
   line-height: 3em;
-  color: #ffffff;
- }
-
-
-.band-name {
-  text-align: center;
-  margin: 0;
-  font-size: 4em;
-  font-family: "Booter - Zero Zero";
-  font-weight: normal;
-  color: white;
 }
 
-.band-name-large {
-  font-size: 8em;
+.display-3 {
+  color: #ffffff;
 }
 
 .content-section {
@@ -60,6 +81,7 @@ h1 {
 }
 
 .container {
+  position: static;
   max-width: 900px;
   margin: 0 auto;
   padding: 0 1.5em;
@@ -72,21 +94,11 @@ h1 {
   font-size: 2.5em;
 }
 
-.about-band-image {
-  float: left;
-  height: 200px;
-  width: 200px;
-  margin: 15px;
-  border-radius: 50%;
-}
-
-
-
 .btn-header {
-  margin: .5em 15% 2em 15%;
+  margin: 0.5em 15% 2em 15%;
   color: white;
-  border: 2px solid #2D9CDB;
-  background-color: rgba(255, 255, 255, .1);
+  border: 2px solid #2d9cdb;
+  background-color: rgba(255, 255, 255, 0.1);
   border-radius: 0;
   font-size: 1.5em;
   font-weight: lighter;
@@ -95,13 +107,12 @@ h1 {
 }
 
 .btn-header:hover {
-  background-color: rgba(255, 255, 255, .3);
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 .btn-play {
   display: block;
   margin: 0 auto;
-  color: #2D9CDB;
   font-size: 4em;
   border-radius: 50%;
   width: 100px;
@@ -114,45 +125,12 @@ h1 {
   color: white;
   background-color: #381460;
   border: none;
-  border-radius: .3em;
+  border-radius: 0.3em;
   font-weight: bold;
 }
 
 .btn-primary:hover {
-  background-color: #9aceff;
-}
-
-.tour-row {
-  border-bottom: 1px solid black;
-  padding-bottom: 1em;
-  margin-bottom: 1em;
-}
-
-.tour-row:last-child {
-  border: none;
-}
-
-.tour-item {
-  display: inline-block;
-  padding-right: .5em;
-}
-
-.tour-date {
-  color: #555;
-  width: 11%;
-  font-weight: bold;
-}
-
-.tour-city {
-  width: 24%;
-}
-
-.tour-arena {
-  width: 42%;
-}
-
-.tour-btn {
-  max-width: 19%;
+  background-color: #41d8cb;
 }
 
 .shop-item {
@@ -170,13 +148,13 @@ h1 {
 }
 
 .shop-item-image {
-  height: 250px;
+  height: 200px;
 }
 
 .shop-item-details {
   display: flex;
   align-items: center;
-  padding: 5px;
+  padding: 3px;
 }
 
 .shop-item-price {
@@ -225,7 +203,7 @@ h1 {
 
 .cart-item-title {
   color: #333;
-  margin-left: .5em;
+  margin-left: 0.5em;
   font-size: 1.2em;
 }
 
@@ -235,23 +213,11 @@ h1 {
   border-radius: 10px;
 }
 
-.btn-danger {
-  color: white;
-  background-color: #EB5757;
-  border: none;
-  border-radius: .3em;
-  font-weight: bold;
-}
-
-.btn-danger:hover {
-  background-color: #CC4C4C;
-}
-
 .cart-quantity-input {
   height: 34px;
   width: 50px;
   border-radius: 5px;
-  border: 1px solid #56CCF2;
+  border: 1px solid #56ccf2;
   background-color: #eee;
   color: #333;
   padding: 0;
@@ -292,60 +258,48 @@ h1 {
   font-size: 1.75em;
 }
 
-
-
 /* --------------- End of Cart ---------------- */
 
-
-
-.Statement {
+.centered {
   text-align: center;
-}
-
-
-p {
-  text-align: center;
-  line-height: 1.2em;
-
-  font-family: 'Lato', sans-serif;
-}
-
-.vidControl {
-
-  border-radius: 10px;
-  align-items: center;
-  justify-content: space-around;
-  margin-top: 1em;
-  margin-bottom: 1em;
-
-  }
-
-.videoz{
-
+  margin-left: auto;
+  margin-right: auto;
   width: 100%;
-  border: 10px outset #ddd;
-  display: inline-block;
-
 }
 
+#vids {
+  border-radius: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: center;
+  margin-bottom: 1em;
+}
 
 .under {
-  margin-top: 15%;
-  margin: 25px 0;
   background-color: #c9d1d3;
   text-align: center;
-  width: 55%;
-  margin-left: 25%;
-  font-family: 'Homemade Apple', cursive, Arial;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: "Homemade Apple", cursive, Arial;
   border-radius: 15px;
   font-size: 1.5em;
-  text-align: center;
+  border-top: #333 7px solid;
+}
+
+.videoz {
+  margin-top: 1rem;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  border-top: #333 7px solid;
+  display: grid;
+  border-bottom: #333 7px solid;
 }
 
 .butn {
-
   display: inline;
-  -webkit-border-radius:20;
+  -webkit-border-radius: 20;
   -moz-border-radius: 20;
   border-radius: 20px;
   font-family: Arial;
@@ -364,13 +318,162 @@ p {
   transform: scale(1.3);
 }
 
-.btn-group{
-  display: inline;
+.video__container {
+  position: static;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 17rem;
+  z-index: -1;
+}
+.video__item {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
+/* video switch */
+.video__switch-container {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .video__switch-container {
+    display: block;
+    position: absolute;
+    bottom: 5%;
+    right: 5%;
+    z-index: 3;
+  }
+  .video__switch {
+    position: relative;
+    width: 5rem;
+    background: var(--yellow);
+    text-transform: uppercase;
+    display: flex;
+    justify-content: space-between;
+    padding: 0.25rem;
+    cursor: pointer;
+    border-radius: 0.5rem;
+  }
+  .video__switch-btn {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 50%;
+    background: var(--brown);
+    border-radius: 0.5rem;
+    transition: all 0.3s ease-out;
+  }
+  .btnSlide {
+    left: 50%;
+  }
+}
+
+/*  login    */
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+.brand {
+  text-align: center;
+}
+
+.wrapper {
+  box-shadow: 0 0 20px 0 rgba(72, 94, 116, 0.7);
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.wrapper > * {
+  padding: 1em;
+}
+
+.company-info {
+  background: #a278b5;
+}
+
+.company-info h3,
+.company-info ul {
+  text-align: center;
+  margin: 0 0 1rem 0;
+}
+
+/* FORM STYLES */
+.contact form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+}
+
+.contact form label {
+  display: block;
+}
+
+.contact form p {
+  margin: 0;
+}
+
+.contact form .full {
+  grid-column: 1 / 3;
+}
+
+.contact form button,
+.contact form input,
+.contact form textarea {
+  width: 100%;
+  padding: 1em;
+  border: 1px solid #766d97;
+}
+
+.contact form button {
+  background: #766d97;
+  border: 0;
+  text-transform: uppercase;
+}
+
+.contact form button:hover,
+.contact form button:focus {
+  background: #d36dce;
+  color: #fff;
+  outline: 0;
+  transition: background-color 2s ease-out;
+}
+
+.alert {
+  text-align: center;
+  padding: 10px;
+  background: #d36dce;
+  color: #fff;
+  margin-bottom: 2rem;
+  display: none;
+}
+
+@media (min-width: 700px) {
+  .wrapper {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+  }
+
+  .wrapper > * {
+    padding: 2em;
+  }
+
+  .company-info h3,
+  .company-info ul,
+  .brand {
+    text-align: left;
+  }
 }
 
 footer {
+  margin-left: auto;
+  margin-right: auto;
   margin-top: 2em;
-  margin-bottom: 3%;
+  margin-bottom: 1em;
   text-align: center;
+  width: 100%;
 }
