--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,15 +3,22 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie-edge">
+    <meta http-equiv="set-cookie X-UA-Compatible" content="ie-edge id=12345; SameSite=Strict">
     <title>Grinder Gifts</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="GrinderGiftsCSS.css">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700%7CRoboto%7CJosefin+Sans:100,300,400,500" rel="stylesheet" type="text/css">
     <script src="https://checkout.stripe.com/checkout.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://js.stripe.com/v3/"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="https://kit.fontawesome.com/5fbd16b839.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css" />
+    <script src="https://unpkg.com/sweet-scroll/sweet-scroll.min.js"></script>
    <script>
      var stripePublicKey = '<%= stripePublicKey %>'
 
@@ -19,44 +26,85 @@
 
   </head>
   <body>
+
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
 
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button><img id="gifts" src="TopLogo.JPG" alt="gifts">
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://damp-shelf-59759.herokuapp.com/">Sign In</a>
-          </li>
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+  <span class="navbar-toggler-icon"></span>
+</button>
+<a class="navbar-brand poppin" href="#">Grinder<em>Gifts</em></a>
+<div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+<li class="nav-item active">
+  <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
+</li>
+<li class="nav-item">
+  <a class="nav-link" href="#aboutus" tabindex="-1" aria-disabled="true" data-scroll>AboutUs</a>
+</li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="java.html" tabindex="-1" aria-disabled="true">Java</a>
-          </li>
-        </ul>
-    </div>
-    <div class="cart-btn" id= "cart-count">
-      <span class="nav-icon">
+<li class="nav-item">
+  <a class="nav-link" href="#vids" data-scroll>Videos</a>
+</li>
+<li class="nav-item">
+  <a class="nav-link" href="#contacts" data-scroll>ContactUs</a>
+</li>
+</ul>
+</div>
+<div class="cart-btn" id= "cart-count">
+<span class="nav-icon">
 
-      </span>
-  </div>
-      </nav>
+</span>
+
+</div>
+</nav>
 
       <!-- End of nav bar -->
-      <!--Products-->
-   <header>
-      <h1 align=center><b>Online Store</b></h1>
+
+  <header>
+    <article class="video__container">
+      <video class="video__item" playsinline autoplay muted loop="true">
+        <source src="Beans.mp4" type="video/mp4">
+        <source src="Beans.ogv" type="video/ogv">
+        <source src="Beans.webm" type="video/webm"> Your browser does not support vidoe tag
+      </video>
+
+    </article>
+
+
     </header>
+
+
+<!-- end of header vid-->
+
+        <section id="info1">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-6 col-sm-6">
+                <div class="info-left">
+                  <img src="All.jpg">
+                </div>
+              </div>
+              <div class="col-md-6 col-sm-6">
+                <div class="info-right">
+                  <h2 class="poppin">Aircraft Grade Aluminium<br />
+                    Razor sharp Magnetic tops
+                    </h2>
+                  <br>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <hr>
+
+    <!--Products-->
 
     <div class="container">
       <div class="row">
 
 
       <section class="container content-section">
-
+          
           <div class="shop-items">
             <% items.grinders.forEach(function(item){ %>
               <div class="shop-item" data-item-id= "<%= item.id %>">
@@ -68,7 +116,8 @@
                   </div>
               </div>
               <% }) %>
-          </div>
+         
+        </div>
       </section>
 
       <section class="container content-section">
@@ -89,38 +138,126 @@
 
     <!--end of product line-->
 
-<hr>
-<div class="under">
-<h2 class="Statement"><u>Gift to Grind!</u></h2>
+    <div class="jumbotron centered" id="aboutus">
+  <div class="container">
+    <i class="fas fa-gift fa-6x"></i>
+    <h1 class="display-3 poppin">Grinder Gifts</h1>
+    <p class="lead poppin"><strong>Grinding is the Gift</strong></p>
+    <hr>
+    <div class="under">
         <p>
-          <b>GrinderGifts</b> is a company created from the concept of coffee and hard work. Turning that concept into unique custom grinders and designs! Email us any designs you want to implement on your grinders, or order one of our products on display.</p>
+          <b>GrinderGifts</b> is a company created from the concept of the grind, hard work, and determination. Mixing the ingredients into unique custom grinders that people can enjoy.
+          Email us any design ideas today!</p>
         </div>
+  </div>
 
-      <div class="videoz">
-        <center>
-        <video controls src="vidGrind.mov" type= "video/mov" class= "vidControl" preload="auto" poster="GG_Gold.JPG" height="300" width="250">
+</div>
 
-        </video>
-        <video controls src="GGiftsvid.mov" type= "video/mov" class= "vidControl" preload="auto" poster="Purple.JPG" height="300" width="250">
+<! end of login -->
+<div class="container">
+<div class="row">
+<div class="col-xs-6 col-sm-6 col-md-6" style="display:flex"   id="vids">
+       
+       <iframe src="https://player.vimeo.com/video/428476583" width="700" height="280" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 
-        </video>
-      </center>
+       <iframe src="https://player.vimeo.com/video/428478535" width="700" height="280" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+     </div>
+    </div>
+    </div>
+       
+ 
+ 
+      
+
+<!--contact us-->
+
+<div class="wrapper" id="contacts">
+  <div class="company-info">
+    <h3 class="poppin">Grinder Gifts</h3>
+    <ul>
+      <li><i class="fa fa-road"></i> Arlington, VA</li>
+      <li><i class="fa fa-phone"></i> 571-277-7641</li>
+      <li><i class="fa fa-envelope"></i> admin@grindergifts.com</li>
+    </ul>
+  </div>
+  <div class="contact">
+    <h3 class-"poppin">Contact Us</h3>
+
+    <div class="alert"> Message sent! </div>
+    <form id="contactForm">
+      <p>
+        <label>Name</label>
+        <input type="text" name="name" id="name" required>
+      </p>
+      <p>
+        <label>Company</label>
+        <input type="text" name="company" id="company">
+      </p>
+      <p>
+        <label>Email Address</label>
+        <input type="email" name="email" id="email" required>
+      </p>
+      <p>
+        <label>Phone Number</label>
+        <input type="text" name="phone" id="phone">
+      </p>
+      <p class="full">
+        <label>Message</label>
+        <textarea name="message" rows="8" id="message"></textarea>
+      </p>
+      <p class="full">
+        <button type="submit">Submit</button>
+      </p>
+    </form>
+  </div>
 </div>
 
   <footer>
 
-    <div class="btn-group col-lg-3 col-md-4 col-sm-6">
+    <div class="btn-group">
       <ul class="nav footer-nav">
-     <a class="btn btn-primary" style="margin:10px" href="ContactUs.html">Contact Us</a>
-     <a class="btn btn-primary" style="margin:10px" href="https://twitter.com/grindergifts"><i class="fab fa-twitter"></i></a>
-     <a class="btn btn-primary" style="margin:10px" href="https://www.instagram.com/grindergifts/"><i class="fab fa-instagram"></i></a>
+
+     <a class="btn btn-primary" style="margin:10px" href="https://github.com/TyeBeal22"><i class="fab fa-github"></i></a>
+     <a class="btn btn-primary" style="margin:10px" href="https://www.instagram.com/techbeal22/"><i class="fab fa-instagram"></i></a>
       </ul>
     </div>
 
 
 </footer>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script src="https://kit.fontawesome.com/5fbd16b839.js"></script>
+
+        <script src="https://www.gstatic.com/firebasejs/7.13.2/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/7.13.2/firebase-analytics.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/7.13.2/firebase-database.js"></script>
         <script src="GrinderGiftsJS.js"></script>
+        <script>
+          window.sr = ScrollReveal();
+          sr.reveal('.navbar', {
+            duration: 2000,
+            origin: 'bottom'
+          });
+          sr.reveal('.info-left', {
+            duration: 2000,
+            origin: 'left',
+            distance: '200px'
+          });
+          sr.reveal('.info-right', {
+            duration: 2000,
+            origin: 'right',
+            distance: '200px'
+          });
+          sr.reveal('.under', {
+            duration: 2000,
+            origin: 'bottom',
+            distance: '100px',
+            viewFactor: 0.2,
+          });
+
+          sr.reveal('.jumbotron', {
+              duration: 2000,
+              origin: 'bottom',
+              distance: '100px',
+
+          });
+        </script>
   </body>
 </html>
